# psdfile

./: .gitignore  CMakeLists.txt  main.cpp  manual.tjs  packages.config  psdclass.cpp  psdclass.h  psdclass_loadmem.cpp  psdclass_loadstream.cpp  psdclass_loadstreambase.cpp  psdfile_vs2015.sln  psdfile_vs2015.vcxproj  psdfile_vs2015.vcxproj.filters  readme.txt  vcpkg-configuration.json  vcpkg.json  zlib_vs2015.vcxproj
psdparse/: CMakeLists.txt  psdbase.h  psddata.h  psddesc.h  psdfile.cpp  psdfile.h  psdimage.cpp  psdlayer.cpp  psdlayer.h  psdparse.cpp  psdparse.h  psdparse_vs2015.vcxproj  psdparse_vs2015.vcxproj.filters  stdafx.h
